# orbital-tech-assignment

./: .flake8  .gitignore  .pre-commit-config.yaml  PLANNING.md  PLANNING_1.md  PRODUCTION.md  Question-1.md  README.md  assignment.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  TOKENIZATION_NOTES.md  alembic.ini  main.py  pyproject.toml
backend/alembic_migrations/: env.py
backend/alembic_migrations/versions/: V20251220_170210_e8fc633272b3_initial_tables_reports_cache_and_usage_.py
backend/app/: __init__.py  create_app.py
backend/app/api/: __init__.py  health.py  usage.py
backend/app/cfg/: development.toml  production.toml  test.toml
backend/app/clients/: orbital_api.py
backend/app/core/: __init__.py  config.py  dependencies.py
backend/app/database/: __init__.py  base.py
backend/app/database/repositories/: __init__.py  base.py  report_cache.py  usage_snapshot.py
backend/app/database/schemas/: __init__.py  usage.py
backend/app/database/session_manager/: __init__.py  db_session.py
backend/app/models/: schemas.py
backend/app/services/: credit_calculator.py  usage_service.py
backend/app/test/: conftest.py
backend/app/test/unit_tests/test_services/: test_credit_calculator.py
backend/app/utils/: __init__.py  constants.py
backend/init-db/: 01-init.sql
frontend/: .dockerignore  .env.example  .prettierrc  Dockerfile  Dockerfile.dev  README.md  cypress.config.ts  eslint.config.js  index.html  jest.config.js  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/coverage/lcov-report/: index.html
frontend/coverage/lcov-report/src/: App.tsx.html  index.html  theme.ts.html
frontend/cypress/e2e/: dashboard.cy.ts
frontend/cypress/support/: commands.ts  e2e.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/ components/: usageAnalytics.tsx  usageTable.tsx
frontend/src/api/: client.ts  usage.ts
frontend/src/components/ActivityLog/: index.test.tsx  (+1 more)
frontend/src/config/: env.ts
frontend/src/constants/: index.ts
frontend/src/hooks/: useUrlSortState.ts  useUsage.tsx
frontend/src/schemas/: usage.ts
frontend/src/test/: setup.tsx  setupTests.ts  testUtils.tsx
frontend/src/theme/: index.ts  tokens.ts
frontend/src/types/: index.ts  usage.ts
frontend/src/utils/: chartDataTransform.ts  dateFormatters.ts  errorUtils.ts  logger.ts  sortUtils.ts  telemetry.ts
(+38 files in other folders)
