[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orbital-usage-api"
version = "0.1.0"
description = "Orbital Witness Usage Tracking API"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi==0.109.1",
    "uvicorn[standard]==0.22.0",
    "httpx>=0.24.1",
    "pydantic>=2.0.0",
    "tomli==2.0.1",
    "python-dotenv==1.0.0",
    "logzero==1.7.0",
    "sqlalchemy>=2.0.17",
    "asyncpg>=0.27.0",
    "alembic>=1.11.1",
    "psycopg2-binary>=2.9.6",
    "greenlet>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff==0.12.5",
    "pre-commit==3.3.2",
    "flake8==7.3.0",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-simplify",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "W191",   # indentation contains tabs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__ files
"tests/**/*.py" = ["ARG", "S101"]  # allow unused args and asserts in tests

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "httpx", "uvicorn"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "-vv",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/config.py",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
